sumo/tests/duarouter/errors/no_input/options.duarouter
--net-file=%SUMO_DIST%\tests\duarouter\errors\no_output\increasing_trips.net.xml -o routes.rou.xml
